--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       timeout: 5s
       retries: 5
 
-  web:
+  backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -34,6 +34,23 @@ services:
     networks:
       - bountyboard-network
     command: python manage.py runserver 0.0.0.0:8000
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_API_URL=http://localhost:8000/api
+    depends_on:
+      - backend
+    networks:
+      - bountyboard-network
 
 networks:
   bountyboard-network:
