--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,13 @@ requests==2.31.*
 celery==5.3.*
 praw==7.7.*
 stripe==7.0.*
+django-filter==23.5.*
+markdown==3.5.*
+django-rest-auth==0.9.*
+whitenoise==6.6.*
+redis==5.0.*
+pytest==7.4.*
+pytest-django==4.6.*
+coverage==7.3.*
+isort==5.12.*
+black==23.12.*
