--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,4 +15,5 @@ COPY . .
 EXPOSE 3000
 
 # Start the development server
-CMD ["npm", "start", "--", "--host", "0.0.0.0"]
+CMD ["npm", "start"]
+#CMD ["npm", "start", "--", "--host", "0.0.0.0"]
