--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - backend
     networks:
       - bountyboard-network
-#    command: npm start --host 0.0.0.0  # Explicitly bind to 0.0.0.0 inside the container
+    command: npm start --host 0.0.0.0 --disable-host-check
 
 networks:
   bountyboard-network:
