--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,5 +39,5 @@
   "devDependencies": {
     "react-scripts": "5.0.1"
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "https://bountyboard.kybiu.com"
 }
