--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,12 +43,13 @@ services:
       - ./frontend:/app
       - /app/node_modules
     ports:
-      - "80:3000"
+      - "3000:3000"
     environment:
-      - NODE_ENV=development
-      - REACT_APP_API_URL=http://localhost:8000/api
+      - NODE_ENV=production
+      - REACT_APP_API_URL=https://bountyboard.kybiu.com/api
+#      - NODE_ENV=development
+#      - REACT_APP_API_URL=http://localhost:8000/api
       - HOST=0.0.0.0
-      - WDS_SOCKET_PORT=80
       - DANGEROUSLY_DISABLE_HOST_CHECK=true
     depends_on:
       - backend
